# Aurelius

./: .aurelius-meta-prompt.md  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  AURELIUS_COMPREHENSIVE_REVIEW.md  AURELIUS_SKILL.md  AUTONOMOUS_IMPROVEMENT_SUMMARY.md  BRAIN_ARCHITECTURE.md  BRANCH_AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EULA.md  GAP_LEDGER.md  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  __init__.py  adaptive_precision.py  agent_core.py  agent_loop.py  agent_registry.py  agent_train.py  alembic.ini  alignment_impl.py  api_registry.py  api_server.py  aurelius_cli.py  aurelius_constants.py  aurelius_loop_v7.json  aurelius_model_14b.py  aurelius_model_1b.py  aurelius_model_32b.py  (+55 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
acp_adapter/: capability_negotiator.py  event_logger.py  mcp_client.py  mcp_health_checker.py  mcp_router.py  mcp_server.py  plugin_host.py  session_manager.py  tool_rate_limiter.py  tool_registry.py  tool_result_formatter.py  tool_schema_validator.py
agent/: __init__.py  agent_memory.py  agent_planner.py  agent_registry.py  agent_runtime.py  auto_dev.py  auxiliary_client.py  background_executor.py  budget_ledger.py  code_execution_sandbox.py  code_execution_tool.py  code_test_runner.py  command_dispatcher.py  cron_job.py  execution_tracer.py  file_memory_store.py  five_state_controller.py  goal_hierarchy.py  interface_runtime.py  loop_guard.py  message_handler.py  nl_command_parser.py  persistent_agent.py  personality_router.py  plan_and_execute.py  plan_executor.py  plan_observe_reflect.py  planning_engine.py  plugin_loader.py  plugin_sandbox.py  preserve_thinking.py  reflection_engine.py  reflexion_agent.py  run_store.py  self_upgrade.py  session_journal.py  session_manager.py  skill_composer.py  skill_evolver.py  skill_trigger_engine.py  (+18 more)
alembic/: README  env.py
archive/: __init__.py  moe_memory.py  ntm_memory.py
aurelius/: __init__.py  __init__.py.bak  _neural_brain_impl.py  _registry_snapshot.py  _self_upgrade_impl.py  agent_registry.py  api_registry.py  neural_brain.py  plugin_system.py  self_upgrade.py  skills_registry.py  specialist_agents.py
aurelius_cli/: __init__.py  __main__.py  agent_commands.py  agent_engine.py  aurelius_shell.py  backend_commands.py  completion_engine.py  config.py  debug_commands.py  doctor.py  family_commands.py  history_manager.py  history_store.py  interactive.py  interactive_commands.py  interface_commands.py  main.py  metrics_commands.py  output_formatter.py  pipeline_commands.py  pipeline_processor.py  repl_session.py  runtime_client.py  scheduler_commands.py  session_commands.py  status_bar.py  terminus_bench.py  v2_cli.py
benchmarks/: grad_scaler_perf.py  kv_evict_benchmark.py
configs/: amc_first_benchmark.yaml  api_keys.example.json  config.yaml  config_14b.yaml  config_1b.yaml  config_32b.yaml  curriculum.yaml  deepspeed_zero1.json  duo_attention_heads.json  merge_slerp.yaml  merge_ties.yaml  ollama.Modelfile  tokenizer_config.json  train_1b.yaml  train_2.7b.yaml  train_3b.yaml  train_moe_5b.yaml  yarn_finetune.yaml
crates/api-gateway/: Cargo.toml  Dockerfile
crates/api-gateway/src/: auth.rs  config.rs  main.rs  metrics.rs  proxy.rs  rate_limit.rs
crates/api-gateway/src/routes/: health.rs  proxy.rs
crates/data-engine/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/data-engine/src/: engine.rs  lib.rs  persistence.rs
crates/prompt-templates/: Cargo.toml  index.d.ts  package.json
crates/prompt-templates/src/: lib.rs
crates/redis-client/: Cargo.toml  index.d.ts  package.json
crates/redis-client/src/: lib.rs
crates/search-index/: Cargo.toml  index.d.ts  package.json
crates/search-index/src/: lib.rs
crates/session-manager/: Cargo.toml  index.d.ts  package.json
crates/session-manager/src/: lib.rs
crates/usage-store/: .gitignore  Cargo.toml
crates/usage-store/src/: lib.rs
crates/vector-similarity/: Cargo.toml  index.d.ts  package.json
crates/vector-similarity/src/: lib.rs
cron/: __init__.py  dag_executor.py  dead_letter_queue.py  parallel_step.py  scheduler.py  step_pipeline.py  workflow_engine.py  workflow_orchestrator.py  workflow_visualizer.py
data/: memory_training_data.jsonl
deployment/: Dockerfile  Dockerfile.dev  Dockerfile.gpu  compose.dev.yaml  compose.gpu.yaml  compose.override.yaml  compose.production.yaml  compose.yaml  frontend.Dockerfile  nginx.conf
docs/: ALIGNMENT_SCOPE.md  AMC_FIRST_ARCHITECTURE.md  ARCHITECTURE.md  CONFIDENTIAL.md  CORE_SURFACE.md  ENGINEERS_LEDGER.md  FEATURE_AUDIT.md  PACKAGE_CONSOLIDATION_MIGRATION.md  SECURITY_AUDIT.md  V4_INTEGRATION_GUIDE.md  architecture.html  dashboard.html  dataset_card.md  dead-code-analysis.md  eval_card.md  harvest_journal.md  model_card.md  paper_ideas_alignment.md  paper_ideas_efficiency.md  paper_ideas_memory_moe.md  paper_ideas_reasoning.md  research-brief.md  sbom.json  seed_insights_inference.md  seed_insights_memory.md  seed_insights_verification.md  threat_model.md
environments/: __init__.py
examples/: README.md  pipeline_filter_map.py  schedule_cron_job.py  schedule_delayed_job.py  schedule_interval_job.py  sre_metrics_basic.py  sre_metrics_demo.py
frontend/: .env.example  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
gateway/: __init__.py  __init__.py.bak  agent_cockpit.py  api_server.py  aurelius_api.py  aurelius_server.py  auth_middleware.py  chat_client.py  chat_client.py.logged  chat_session.py  context_compressor.py  cors_middleware.py  engine_loader.py  guardrails.py  health_probe.py  kv_cache_compression.py  load_balancer.py  load_shedder.py  memory_manager.py  metrics_middleware.py  model_multiplexer.py  model_router.py  openai_api_validator.py  openai_api_validator.py.logged  paged_kv_cache.py  quick_instruction.py  rate_limit.py  rate_limiter_v2.py  streaming.py  (+15 more)
rust_memory/: Cargo.toml
rust_memory/src/: checkpoint.rs  lib.rs
(+5132 files in other folders)
