[workspace]
resolver = "2"
members = [
    "crates/usage-store",
    "crates/data-engine",
    "crates/token-counter",
    "crates/session-manager",
    "crates/search-index",
    "crates/redis-client",
    "crates/text-processor",
    "crates/vector-similarity",
    "crates/prompt-templates",
    "crates/json-validator",
    "crates/uuid-gen",
    "crates/api-gateway",
    "tools/data-cli",
    "tools/jsonl_merge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
