[project]
name = "aurelius"
version = "0.1.0"
description = "Aurelius — 1.3B decoder-only LLM trained from scratch"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "tokenizers>=0.20.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
]
# pip>=26.1 required at environment level for CVE-2026-3219
# Removed: einops (0 imports), lxml (0 imports), langchain-core (0 imports, was CVE-patched),
#   langsmith (0 imports, was GHSA-patched)

[project.optional-dependencies]
full = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
]
train = [
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "datatrove[io,processing]>=0.3.0",
    "flash-attn>=2.6.0; platform_machine=='x86_64'",
    "deepspeed>=0.15.0; platform_machine=='x86_64'",
    "wandb>=0.18.0",
    "bitsandbytes>=0.44.0; platform_machine=='x86_64'",
]
apple = [
    "mlx>=0.18.0; platform_machine=='arm64'",
    "mlx-lm>=0.18.0; platform_machine=='arm64'",
]
# eval extras intentionally empty — lm-eval removed due to AUR-SEC-2026-0024
# (transitive sqlitedict<=2.1.0 CWE-502 insecure deserialization).
# Use internal scorers (src/eval/*_scorer.py) instead.
eval = []
serve = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
]
db = [
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[project.scripts]
aurelius = "src.cli.main:main"
aurelius-cli = "src.cli.terminal_cli:main"
aurelius-shell = "src.cli.aurelius_shell:run"
aurelius-api = "src.backend:start_api"
aurelius-server = "src.serving.aurelius_api:start"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurelius*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S"]
ignore = ["S105", "S311"]
per-file-ignores = {"tests/**" = ["S101", "S108", "S104"], "**/__init__.py" = ["E402", "F403"], "training_data/**" = ["E501"], "scripts/**" = ["S101", "S603", "S607"], "src/persona/**" = ["E501"], "src/serving/aurelius_server.py" = ["S104"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--tb=short", "-q"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
