[package]
name = "aurelius-memory"
version = "0.1.0"
edition = "2021"
description = "High-performance memory page manager for Aurelius AI model"

[lib]
name = "aurelius_memory"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
