[package]
name = "aurelius-data-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

[build-dependencies]
napi-build = "2"
