[package]
name = "aurelius-search-index"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.12"
dashmap = "6"
rust-stemmers = "1.2"
radix_trie = "0.2"

[build-dependencies]
napi-build = "2"
