[package]
name = "aurelius-usage-store"
version = "0.1.0"
edition = "2024"

[lib]
name = "aurelius_usage_store"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
redb = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.2", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
